src/styles/animation/animationStyle.scss
@import "../../styles/variables.scss";

.background {
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 1;
	top: 0;
	left: 0;
	margin: 0;
	padding: 0;
	background: $orange-color;
	overflow: hidden;

	li {
		position: absolute;
		display: block;
		list-style: none;
		width: 20px;
		height: 20px;
		background: #a7ce3cbb;
		animation: animate 14s linear infinite;
	}
}

.background li:nth-child(0) {
	left: 15%;
	width: 158px;
	height: 158px;
	bottom: -158px;
	animation-delay: 1s;
}
.background li:nth-child(1) {
	left: 8%;
	width: 80px;
	height: 80px;
	bottom: -80px;
	animation-delay: 5s;
}
.background li:nth-child(2) {
	left: 83%;
	width: 61px;
	height: 61px;
	bottom: -61px;
	animation-delay: 5s;
}
.background li:nth-child(3) {
	left: 49%;
	width: 128px;
	height: 128px;
	bottom: -128px;
	animation-delay: 8s;
}
.background li:nth-child(4) {
	left: 43%;
	width: 72px;
	height: 72px;
	bottom: -72px;
	animation-delay: 11s;
}
.background li:nth-child(5) {
	left: 68%;
	width: 136px;
	height: 136px;
	bottom: -136px;
	animation-delay: 5s;
}
.background li:nth-child(6) {
	left: 11%;
	width: 100px;
	height: 100px;
	bottom: -100px;
	animation-delay: 8s;
}
.background li:nth-child(7) {
	left: 64%;
	width: 65px;
	height: 65px;
	bottom: -65px;
	animation-delay: 16s;
}
.background li:nth-child(8) {
	left: 10%;
	width: 160px;
	height: 160px;
	bottom: -160px;
	animation-delay: 39s;
}
.background li:nth-child(9) {
	left: 19%;
	width: 118px;
	height: 118px;
	bottom: -118px;
	animation-delay: 19s;
}
.background li:nth-child(10) {
	right: 8%;
	width: 118px;
	height: 118px;
	bottom: -118px;
	animation-delay: 25s;
}
.background li:nth-child(11) {
	right: 5%;
	width: 118px;
	height: 118px;
	bottom: -118px;
	animation-delay: 19s;
}

@keyframes animate {
	0% {
		transform: translateY(0) rotate(0deg);
		opacity: 1;
		border-radius: 0;
	}
	100% {
		transform: translateY(-1000px) rotate(720deg);
		opacity: 0;
		border-radius: 50%;
	}
}

